--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,13 @@
 import Hero from "../components/Hero.astro";
 import Experience from "../components/Experience.astro";
 import Toolbox from "../components/Toolbox.astro";
+import Philosophy from "../components/Philosophy.astro";
 import Layout from "../layouts/Layout.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
 	<Hero />
 	<Experience />
 	<Toolbox />
+	<Philosophy />
 </Layout>
